# fp-homework

./: README.md
hw0/: hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: hw1.cabal
hw1/src/: Block1_Task1.hs  Block1_Task2.hs  Block1_Task3AndBlock2_Task1.hs  Block2_Task2.hs  Block3_Task1.hs  Block3_Task2.hs  Block4_Task1.hs  Block4_Task2.hs  Block4_Task3.hs  Block5_Task1.hs  Block5_Task2.hs  Block6.hs
hw1/test/: Block1_Task1Spec.hs  Block1_Task2Spec.hs  Block1_Task3AndBlock2_Task1Spec.hs  Block2_Task2Spec.hs  Block3_Task1Spec.hs  Block3_Task2Spec.hs  Block4_Task1Spec.hs  Block5_Task1Spec.hs  Block5_Task2Spec.hs  Block6Spec.hs  Spec.hs
hw2/: hw2.cabal
hw2/app/: Main.hs
hw2/src/: FileManager.hs  Parser.hs  Types.hs
hw2/test/: FileManagerSpec.hs  ParserSpec.hs  Spec.hs
hw3/: LICENSE  hw3.cabal
hw3/app/: Main.hs
hw3/bench/: Main.hs  Task1Bench.hs
hw3/src/: Task1.hs  Task2.hs  Task3.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs
hw3/test/: Spec.hs  Task2Spec.hs  Task3Spec.hs  Task6Spec.hs  Task7Spec.hs
