name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/JarikLag/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Abubakirov Yaroslav
maintainer:          jarikdorohov@gmail.com
copyright:           2020 Abubakirov Yaroslav

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:    src
  exposed-modules:   Block1_Task1
                   , Block1_Task2
                   , Block1_Task3AndBlock2_Task1
                   , Block2_Task2
                   , Block3_Task1
                   , Block3_Task2
                   , Block4_Task1
                   , Block4_Task2
                   , Block4_Task3
                   , Block5_Task1
                   , Block5_Task2
                   , Block6
  ghc-options:       -Wall
  build-depends:     base >= 4.9 && < 5
                   , mtl
  default-language:  Haskell2010

test-suite hw1-test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  build-depends:     base
                   , hspec
                   , QuickCheck >= 2.13
                   , hw1
  other-modules:     Block1_Task1Spec
                   , Block1_Task2Spec
                   , Block1_Task3AndBlock2_Task1Spec
                   , Block2_Task2Spec
                   , Block3_Task1Spec
                   , Block3_Task2Spec
                   , Block4_Task1Spec
                   , Block5_Task1Spec
                   , Block5_Task2Spec
                   , Block6Spec
  ghc-options:       -Wall -threaded
  hs-source-dirs:    test
  default-language:  Haskell2010