name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/JarikLag/fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Abubakirov Yaroslav
maintainer:          jarikdorohov@gmail.com
copyright:           2020 Abubakirov Yaroslav

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Types, Parser, FileManager
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , directory
                     , optparse-applicative
                     , time
                     , filepath
                     , mtl
  default-language:    Haskell2010

test-suite hw2-test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  build-depends:     base
                   , directory
                   , mtl
                   , filepath
                   , hspec
                   , QuickCheck >= 2.13
                   , hw2
  other-modules:     FileManagerSpec
                   , ParserSpec
  ghc-options:       -Wall -threaded
  hs-source-dirs:    test
  default-language:  Haskell2010

executable hw2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , filepath
                     , mtl
                     , hw2
  default-language:    Haskell2010
