name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 1 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/hw3-JarikLag/tree/master/readme
license:             MIT
license-file:        LICENSE
author:              Abubakirov Yaroslav
maintainer:          jarikdorohov@gmail.com
copyright:           2020 Abubakirov Yaroslav

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:    src
  exposed-modules:   Task1
                   , Task2
                   , Task3
                   , Task5
                   , Task6
                   , Task7
                   , Task8
  ghc-options:       -Wall
  build-depends:     base >= 4.9 && < 5
                   , directory
                   , filepath
                   , microlens
                   , deepseq
                   , comonad
                   , random
                   , stm
                   , vector
                   , hashable
                   , mtl
                   , unordered-containers
  default-language:  Haskell2010

test-suite hw3-test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  build-depends:     base
                   , hspec
                   , QuickCheck >= 2.13
                   , hashable
                   , microlens
                   , hw3
  other-modules:     Task2Spec
                   , Task3Spec
                   , Task6Spec
                   , Task7Spec
  ghc-options:       -Wall -Werror -threaded -rtsopts -with-rtsopts=-N2
  hs-source-dirs:    test
  default-language:  Haskell2010

executable hw3
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw3
                     , random
  default-language:    Haskell2010

benchmark hw3-bench
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      Task1Bench
  hs-source-dirs:     bench
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N4
  build-depends:      base
                    , hw3
                    , criterion
                    , random
                    , deepseq
  default-language:   Haskell2010